Fix the contrast fix for dark mode

--- a/packages/web/docs/src/search-results-contrast-fix.css
+++ b/packages/web/docs/src/search-results-contrast-fix.css
@@ -1,4 +1,4 @@
-.nextra-search-results ._text\-primary\-600 {
+:is(html[class~='light'] .nextra-search-results ._text\-primary\-600) {
   color: hsl(
     var(--nextra-primary-hue) var(--nextra-primary-saturation) 20% / var(--tw-text-opacity)
   );
